# trip-likes

./: .env.example  .gitignore  Makefile  plan-final.md  todo.md
.cursor/agents/: researcher.md  skill-manager.md  verifier.md
.cursor/rules/: agent-workflow.mdc  backend-python.mdc  cicd.mdc  frontend.mdc  global.mdc  mcp-and-skills.mdc  shared-types.mdc  testing.mdc
backend/: data.db  pyproject.toml  test.db
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/v1/: comments.py  evaluations.py  posts.py  settings.py
backend/app/core/: config.py  database.py  deps.py  exceptions.py
backend/app/models/: __init__.py  comment.py  evaluation.py  post.py
backend/app/schemas/: comment.py  evaluation.py  post.py
backend/app/services/: agent_evaluator.py  agent_personas.py  comment_generator.py  evaluation_prompts.py  feedback_optimizer.py  prompt_templates.py
backend/app/utils/: llm_client.py  token_counter.py
backend/tests/: conftest.py
backend/tests/api/: test_posts.py
docs/: PM-WORKFLOW.md  PRD-TEMPLATE.md  openclaw-deploy.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  providers.tsx
frontend/src/app/evaluation/: page.tsx
frontend/src/app/generate/: page.tsx
frontend/src/app/posts/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: attitude-pie.tsx  radar-chart.tsx  score-bar-chart.tsx  sidebar.tsx
frontend/src/lib/: api.ts
frontend/src/styles/: globals.css
scripts/: pre-commit  sync-api-types.sh
